Fix error with scrollbar not appearing in chat when screen size changes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,10 +18,9 @@ body {
 .message-container {
     overflow-y: auto;
     height: 94vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
     gap: 5px;
+    display: flex;
+    flex-direction: column
 }
 
 .chat {
